--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,7 +1,7 @@
 <html>
 
 <body>
-<img id="gato" class="gato3" src="https://www.stickpng.com/assets/images/5a5a8d8d14d8c4188e0b08ef.png" width=80>
+<img id="gato" class="gato3" src="https://i.imgur.com/e9ikkSt.png" width=80>
 
 <img id="copo1" class="copo1" src="https://upload.wikimedia.org/wikipedia/commons/4/40/Copo-laranja.png" style="transform:rotate(180deg);">
 
